--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.6",
+    "axios": "^1.2.1",
+    "pinia": "^2.0.27"
   }
 }
