--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "nuxt": "3.0.0"
+    "nuxt": "3.0.0",
+    "prisma": "^4.7.1"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
+    "@prisma/client": "^4.7.1",
     "axios": "^1.2.1",
     "pinia": "^2.0.27"
   }
